added readme, openapi, circuit breaker, rate limiter,new version of spring boot and java 25, virtual threads; fixed bugs with bot